Moved openapi generator into common module. Updated openapi and mapping.
