# api-gateway/src/main/java/ru/maxb/soulmate/gateway/dto/ProfileDto.java
@@ -1,9 +1,0 @@
-package ru.maxb.soulmate.gateway.dto;
-
-public record ProfileDto (
-        String firstName,
-        String lastName,
-        String email,
-        String phoneNumber
-) {
-}
