# api-gateway/src/main/java/ru/maxb/soulmate/gateway/dto/ProfileRegistrationRequestDto.java
@@ -1,6 +1,0 @@
-package ru.maxb.soulmate.gateway.dto;
-
-public record ProfileRegistrationRequestDto(
-
-) {
-}
