# api-gateway/src/main/java/ru/maxb/soulmate/gateway/dto/ProfileRegistrationResponseDto.java
@@ -1,8 +1,0 @@
-package ru.maxb.soulmate.gateway.dto;
-
-import java.util.UUID;
-
-public record ProfileRegistrationResponseDto(
-        UUID id
-) {
-}
